<resources>
    <string name="app_name">KotlinMVVMApp</string>
    <string name="list_of_all_closed_pull_request_from_the_repo">List of all closed pull request from the repo :</string>
    <string name="demo_name">Demo Name</string>
    <string name="title">title</string>
    <string name="created_by">created by :</string>
    <string name="created_at">created at :</string>
    <string name="created_date">created date</string>
    <string name="closed_at">closed at :</string>
    <string name="closed_date">closed date</string>
</resources>